# rix-os

./: Cargo.toml  build.rs  rustc-ice-2026-03-18T16_56_41-12153.txt  rustc-ice-2026-03-19T16_06_50-115308.txt  rustc-ice-2026-03-19T16_10_21-129930.txt  rustc-ice-2026-03-21T08_56_35-1968.txt  rustc-ice-2026-03-30T12_26_06-4283.txt  rustc-ice-2026-04-08T17_35_45-39527.txt  rustc-ice-2026-04-13T07_39_36-1954.txt
.cargo/: config.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: apic.rs  bga.rs  console.rs  interrupts.rs  lib.rs  main.rs  mouse.rs  process.rs  resources.rs  serial.rs  vga_buffer.rs
kernel/src/acpi/: handler.rs  mod.rs
kernel/src/memory/: heap_allocator.rs  mod.rs  page_allocator.rs
