[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
spin = "0.10.0"
bootloader_api = "0.11.8"
noto-sans-mono-bitmap = { version = "0.3.1", features = [ "font_weights_all", "raster_heights_all"] }
aml = "0.16.4"
acpi = "6.0.1"
x86 = "0.52.0"
nostd = "0.1.4"
x2apic = "0.5.0"
x86_64 = "0.15.2"
uart_16550 = "0.3.2"
png-decoder = "0.2"
conquer-once = { version = "0.4.0", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
pc-keyboard = "0.7.0"



[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1